<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_25sdp"
    tools:context=".ui.login.forget.DoneUpdateActivity3"
    style="@style/BackgroundColorApp"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forget4_text1"
        android:textAllCaps="true"
        style="@style/big_text"
        android:textSize="@dimen/_40ssp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_done"
        style="@style/imageColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/forget4_text2"
        android:textSize="@dimen/_14ssp"
        style="@style/textColor2"/>

    <Button
        android:id="@+id/login_btn_forget4"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/forget4_text3"
        android:textColor="@color/white"
        android:background="@drawable/btn"/>

</LinearLayout>