<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_25sdp"
    tools:context=".ui.login.Verification.VerificationCodeActivity"
    style="@style/BackgroundColorApp"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/close_image_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_close"
            style="@style/imageColor"/>

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_vrificationnumber"
            style="@style/imageColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:text="@string/register4_text1"
            android:textAlignment="center"
            style="@style/big_text"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:includeFontPadding="false"
            android:text="@string/register4_text2"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"
            style="@style/textColor2"/>

        <TextView
            android:id="@+id/phoneNumber_tv_Verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:text="@string/register4_text3"
            android:textAlignment="center"
            style="@style/big_text"
            android:textSize="@dimen/_16ssp" />

        <com.chaos.view.PinView
            android:id="@+id/code_pinView_verification"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:cursorVisible="false"
            android:inputType="number"
            android:itemBackground="@color/dark_white"
            app:cursorColor="@color/yellow"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40dp"
            app:itemRadius="5dp"
            app:itemWidth="40dp"
            app:lineColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:includeFontPadding="false"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/register4_text4"
                android:textSize="@dimen/_14ssp"
                style="@style/textColor2"/>

            <TextView
                android:id="@+id/resend_btn_verification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000"
                android:includeFontPadding="false"
                android:text="@string/register4_text5"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"/>

        </LinearLayout>

        <Button
            android:id="@+id/verification_btn_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/btn2"
            android:text="@string/register4_text6"
            android:textColor="@color/white"
            android:transitionName="transition_back_next_btn" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:indeterminate="true"
            android:indeterminateTint="@color/yellow2"
            android:indeterminateTintMode="src_atop" />

    </LinearLayout>


</ScrollView>